feat: add category views

--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -30,6 +30,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'create_task_list' %}">Create Task List</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'category_list' %}">Categories</a>
+            </li>
           {% else %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">Login</a>
