--- a/task_manager/templates/task_manager/create_task.html
+++ b/task_manager/templates/task_manager/create_task.html
@@ -13,5 +13,8 @@
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">Create</button>
     </form>
+    <small class="text-muted">
+      <a href="{% url 'category_list' %}">Gérer les catégories</a>
+    </small>
   </div>
 {% endblock %}
