--- a/task_manager/templates/task_manager/view_task_list.html
+++ b/task_manager/templates/task_manager/view_task_list.html
@@ -15,9 +15,9 @@
       <div class="col-12 col-lg text-lg-end">
         <div class="btn-group mt-3">
           {% if request.user == task_list.created_by %}
-            <a href="{% url 'update_task_list' task_list.id %}" class="btn btn-primary">Update List</a>
-            <a href="{% url 'delete_task_list' task_list.id %}" class="btn btn-danger">Delete List</a>
-            <a href="{% url 'share_task_list' task_list.id %}" class="btn btn-info">Share List</a>
+            <a href="{% url 'update_task_list' object.id %}" class="btn btn-primary">Update List</a>
+            <a href="{% url 'delete_task_list' object.id %}" class="btn btn-danger">Delete List</a>
+            <a href="{% url 'share_task_list' object.id %}" class="btn btn-info">Share List</a>
           {% endif %}
         </div>
       </div>
@@ -123,7 +123,7 @@
                     <a href="{% url 'delete_task' task_list.id task.id %}"
                        class="btn btn-sm btn-danger mb-2 mb-sm-0 mr-sm-2">Delete</a>
                   {% endif %}
-                  <form action="{% url 'mark_task_completed' task_list_id=task.task_list.id task_id=task.id %}"
+                  <form action="{% url 'mark_task_completed' task_list_id=task.task_list.id pk=task.id %}"
                         method="post" style="display: inline-block;">
                     {% csrf_token %}
                     <button type="submit"
