--- a/task_manager/templates/task_manager/task_lists.html
+++ b/task_manager/templates/task_manager/task_lists.html
@@ -8,16 +8,22 @@
 {% block content %}
   <div class="container">
     <h2 class="mt-5">Task Lists</h2>
+    <a href="{% url 'create_task_list' %}" class="btn btn-primary mb-3">Create New Task List</a>
     <ul class="list-group mt-3">
       {% for task_list in task_lists %}
-        <li class="list-group-item">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
           <a href="{% url 'view_task_list' task_list.id %}">{{ task_list.title }}</a>
-          - {{ task_list.total_tasks }} Tasks
+          {{ task_list.total_tasks }} Tasks
           ({{ task_list.completed_tasks }} Completed,
           {{ task_list.not_completed_tasks }} Not Completed)
+          <div>
+            {% if request.user == task_list.created_by %}
+              <a href="{% url 'update_task_list' task_list.id %}" class="btn btn-sm btn-primary">Edit</a>
+              <a href="{% url 'delete_task_list' task_list.id %}" class="btn btn-sm btn-danger">Delete</a>
+            {% endif %}
+          </div>
         </li>
       {% endfor %}
     </ul>
-    <a href="{% url 'create_task_list' %}" class="btn btn-primary mt-3">Create New Task List</a>
   </div>
 {% endblock %}
