--- a/task_manager/templates/task_manager/view_task_list.html
+++ b/task_manager/templates/task_manager/view_task_list.html
@@ -114,6 +114,7 @@
     <div class="row">
       <div class="col">
         <h3>Tasks</h3>
+        <a href="{% url 'create_task' task_list.id %}" class="btn btn-success mb-3">Add Task</a>
         <ul class="list-group">
           {% for task in tasks %}
             <li class="list-group-item {% if task.completed %}list-group-item-secondary{% endif %}">
@@ -152,7 +153,6 @@
             </li>
           {% endfor %}
         </ul>
-        <a href="{% url 'create_task' task_list.id %}" class="btn btn-success mt-3">Add Task</a>
       </div>
     </div>
   </div>
