--- a/task_manager/templates/task_manager/update_category.html
+++ b/task_manager/templates/task_manager/update_category.html
@@ -8,6 +8,7 @@
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">Submit</button>
+      <a href="{% url 'category_list' %}" class="btn btn-secondary">Cancel</a>
     </form>
   </div>
 {% endblock %}
