--- a/task_manager/templates/task_manager/update_task_list.html
+++ b/task_manager/templates/task_manager/update_task_list.html
@@ -12,6 +12,7 @@
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">Update</button>
+      <a href="{% url 'view_task_list' object.id %}" class="btn btn-secondary">Cancel</a>
     </form>
   </div>
 {% endblock %}
