feat: add cancel links for share and create task list

--- a/task_manager/templates/task_manager/share_task_list.html
+++ b/task_manager/templates/task_manager/share_task_list.html
@@ -13,6 +13,7 @@
         {{ form.email }}
       </div>
       <button type="submit" class="btn btn-primary">Share</button>
+      <a href="{% url 'view_task_list' task_list_id %}" class="btn btn-secondary">Cancel</a>
     </form>
   </div>
 {% endblock %}
