--- a/task_manager/templates/task_manager/create_task_list.html
+++ b/task_manager/templates/task_manager/create_task_list.html
@@ -12,6 +12,7 @@
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">Create</button>
+      <a href="{% url 'task_lists' %}" class="btn btn-secondary">Cancel</a>
     </form>
   </div>
 {% endblock %}
