--- a/task_manager/templates/task_manager/category_list.html
+++ b/task_manager/templates/task_manager/category_list.html
@@ -3,8 +3,8 @@
 
 {% block content %}
   <div class="container">
-    <h2 class="mt-5">Catégories</h2>
-    <a href="{% url 'create_category' %}" class="btn btn-primary mb-3">Add Catégory</a>
+    <h2 class="mt-5">Categories</h2>
+    <a href="{% url 'create_category' %}" class="btn btn-primary mb-3">Add Category</a>
     <ul class="list-group mt-3">
       {% for category in categories %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
